- [ADD] is an addition of a new feature
- [FIX] is a bug fix
- [MAINT] is a maintenance change for general improvement and proactive avoidance of potential issues

WARNING: Until version `1.0.0` there is a greater possibility of breaking changes.

== `0.x` changes

=== `0.2.9` (in progress)

=== `0.2.8` (2025-05-22)

- [ADD] Updated microservices examples to export logs to Grafana Loki.
A `Logs` panel has been added to the `HTTP server instances` dashboard.
- Bump deps
* [MAINT] OpenTelemetry `1.50.0`, semconv `1.32.0`, instrumentation `2.16.0-alpha`
** [BREAK] Deprecated `wrap-exception-event` and `exception-event-interceptor`.
These will be stubbed out and later removed in future releases.
https://opentelemetry.io/docs/specs/semconv/attributes-registry/exception/#exception-escaped[OpenTelemetry no longer recommends to record non-escaping exceptions.]
** [BREAK] `add-exception!` and `add-interceptor-exception!` now assume the exception is escaping the span's scope i.e. former option `:escaping?` is true.
** [ADD] `memory-mode` option for programmatically configured OTLP exporters.
** [ADD] `capture-gc-cause` option for JVM runtime garbage collection metrics, for both Java 8 and Java 17 instrumentation.
** [BREAK] `retry-policy` default changed (from disabled) for programmatically configured OTLP exporters.
** [ADD] Added `steffan-westcott.clj-otel.api.baggage/get-entry`
** For all `clj-otel` functions which create a span such as `with-span!`, optional entries in `:source` map have changed:
*** [BREAK] `:fn` should be the fully qualified function name
*** [MAINT] Support for `:ns` has been deprecated and removed
*** [ADD] `:col` is the source column number
* [ADD] `:getter` and `:setter` options to generalise context propagation functions `->headers` and `headers->merged-context` for use  in applications other than Ring HTTP servers.
* [ADD] Programmatic configuration of log record exporters used for debugging.
* [BREAK] Pedestal `0.7.0` in microservices examples.